--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: "Blog Title"
+title: FirstProject
 author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+theme: jekyll-theme-minimum
+description: Bookmark this to keep an eye on my project updates!
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
