--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FirstProject
+title: "FirstProject"
 author: "Blog Author"
 # theme: jekyll-theme-minimum
 description: Bookmark this to keep an eye on my project updates!
