--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: "FirstProject"
-author: "Blog Author"
-# theme: jekyll-theme-minimum
+author: "DevTeamSR"
 description: Bookmark this to keep an eye on my project updates!
 permalink: /:title/
 lang: "en"
