--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "Home.html"}
-  - {file: "Calculator.html"}
+  - {file: "Home.html", icon: "home"}
+  - {file: "Calculator.html", title: "Converter"}
+  - {file: "About US.html", title: "Contributors"}
 
 # external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
 #   - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
