--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ navigation:                # accepts {file, title, URL, icon, sidebaricon}
   - {file: "About US.html", title: "Contributors"}
 
 # external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-#   - {title: Mail, icon: envelope, URL: "mailto:niklasbuschmann@users.noreply.github.com"}
-#   - {title: Github, icon: GitHub, URL: "https://github.com/niklasbuschmann/contrast"}
-#   - {title: Subscribe, icon: RSS, URL: "/feed.xml"}
+  - {title: Mail, icon: envelope, URL: "mailto:niklasbuschmann@users.noreply.github.com"}
+  - {title: Github, icon: GitHub, URL: "https://github.com/niklasbuschmann/contrast"}
+  - {title: Subscribe, icon: RSS, URL: "/feed.xml"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
